tests/NormalTests/paczka1/fuzzy1/46052907.err
Error in line 6: SdInzd A447 35,1
Error in line 17: zwCLXh A447 68,3
Error in line 18: zwCLXh S502 27,8
Error in line 2: jDgxtkD6 A447 76,6
Error in line 31: d4GQBE S900 23,2
